Update vardautomation in reqs.txt

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,5 +5,4 @@ packaging==21.0
 pycodestyle==2.7.0
 typing-extensions==3.10.0.0
 VapourSynth>=51
-pyparsedvd>=0.0.3
-vardautomation>=0.5.0
+git+https://github.com/Ichunjo/vardautomation.git@63e512c#egg=vardautomation
