--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 VapourSynth>=51
 pyparsedvd>=0.0.3
-vardautomation>=0.5.0
+git+https://github.com/Ichunjo/vardautomation.git@63e512c#egg=vardautomation
