--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,6 +22,6 @@ jobs:
           pip install -r requirements-dev.txt
           pip install .
       - name: Running flake8
-        run: flake8 parsedvd
+        run: flake8 vsparsedvd
       - name: Running mypy
-        run: mypy -p parsedvd
+        run: mypy -p vsparsedvd
