--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Python 3.9
+      - name: Setup Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: '3.10'
       - name: Install VapourSynth
         uses: Irrational-Encoding-Wizardry/install-vapoursynth-action@v0.1
         with:
@@ -19,9 +19,9 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -r requirements-dev.txt
-          pip install .
       - name: Running flake8
         run: flake8 vsparsedvd
       - name: Running mypy
-        run: mypy -p vsparsedvd
+        run: mypy vsparsedvd
