--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,3 +24,8 @@ jobs:
           pip install vapoursynth-portable==${{ matrix.versions }}
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
+      - name: Running flake8
+        run: flake8 vsparsedvd
+      - name: Running mypy
+        if: steps.dependencies.outcome == 'success'
+        run: mypy vsparsedvd
