--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -70,6 +69,8 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/make.bat
+docs/Makefile
 
 # PyBuilder
 target/
@@ -91,12 +92,8 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
+# celery beat schedule file
 celerybeat-schedule
-celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -128,6 +125,18 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-test*.py
-sometests/
-.vsjet
+# Local test file
+*test*.py
+
+# vscode folder
+.vscode
+
+# vsjet folder
+.vsjet/
+
+# Index files
+*.ffindex
+*.lwi
+
+# Video test file
+*.mkv
