--- a/.github/workflows/autotag.yml
+++ b/.github/workflows/autotag.yml
@@ -3,9 +3,8 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    branches:
-      - master
+    paths:
+      - vssource/_metadata.py
 
 jobs:
   new_version:
